Updating the workflow

--- a/.github/workflows/image-build_docker.yml
+++ b/.github/workflows/image-build_docker.yml
@@ -47,7 +47,7 @@ jobs:
         with:
           command: |
             docker login --username ${{ secrets.DOCKERHUB_USERNAME }} --password ${{ secrets.DOCKERHUB_TOKEN }}
-            IMAGE="${{ secrets.DOCKERHUB_USERNAME }}/$(echo ${{ github.event.repository.name }} | tr '[:upper:]' '[:lower:]')"
+            IMAGE="${{ secrets.DOCKERHUB_USERNAME }}/(echo ${{ github.event.repository.name }} | tr '[:upper:]' '[:lower:]')"
             DOCKER_NETWORK=acada-game
             docker pull $IMAGE:latest
             docker network create $DOCKER_NETWORK || true
